Added content for the teaching demo

--- a/index.html
+++ b/index.html
@@ -448,7 +448,15 @@
 
                 <div id="demos" class="section-text" style="display:none;">
                     <h2>Teaching Demonstrations</h2>
-                    <div class="placeholder-box">[Insert Videos/Links]</div>
+                    <div class="content-card">
+                        <h3 style="color: #8B5CF6; margin-top: 0;">Demo Teaching Videos</h3>
+                        <p style="font-size: 1.1rem; line-height: 1.6; color: #444; margin-bottom: 20px;">
+                            Please click the Google Drive link below to watch my teaching demonstration videos.
+                        </p>
+                        <a href="https://drive.google.com/drive/folders/1pclPcbtpltcxpv5gA3WR8lOOIc4mGMpO?usp=sharing" target="_blank" style="display: inline-block; background-color: #8B5CF6; color: white; padding: 12px 24px; text-decoration: none; border-radius: 8px; font-weight: bold; transition: background 0.3s;">
+                            <i class="fab fa-google-drive"></i> Watch Videos on Google Drive
+                        </a>
+                    </div>
                 </div>
 
                 <div id="dtr" class="section-text" style="display:none;">
